log
Mon 06 May 2024 08:51:51 PM UTC: 
 treemap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:65:9: error: expected expression before ‘)’ token
   65 |     if ()
      |         ^
Compilation failed
a3acd16
Mon 06 May 2024 08:51:58 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
6816224
Mon 06 May 2024 08:53:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3702328
Mon 06 May 2024 08:57:16 PM UTC: 
 treemap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
bccdc9d
Mon 06 May 2024 09:05:10 PM UTC: 
 treemap.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  0|0
ca33f99
Mon 06 May 2024 09:05:22 PM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
9d9e8f7
Mon 06 May 2024 09:06:25 PM UTC: 
 treemap.c | 23 +----------------------
 1 file changed, 1 insertion(+), 22 deletions(-)
 tests:  12|6
total_score: 20/70
f2bd3f9
Mon 06 May 2024 09:10:28 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  12|6
total_score: 20/70
b8be8cc
